--- a/project.ipynb
+++ b/project.ipynb
@@ -25,7 +25,7 @@
     "<br/>\n",
     "\n",
     "<div class=\"alert alert-warning\">\n",
-    "    <h2> Комментарий ревьюера <a class=\"tocSkip\"> </h2>\n",
+    "    <h2> Комментарий ревьюера оставим здесь<a class=\"tocSkip\"> </h2>\n",
     "    \n",
     "<b>Некоторые замечания и рекомендации💡:</b> В случае, когда решение на отдельном шаге станет еще лучше, если внести небольшие коррективы.\n",
     "</div>\n",
